# eoforeststac

./: .codecov.yml  .gitignore  .readthedocs.yaml  CATALOG.md  CITATION.cff  MANIFEST.in  README.md  conftest.py  contagion_stats.parquet  event_summary_impulse_tracking.parquet  event_year_impulse_tracking.parquet  pyproject.toml
.github/: labels-ingestion.yml
.github/ISSUE_TEMPLATE/: data-ingestion-request.yml
.github/workflows/: ci.yaml  deploy.yml  pylint.yaml  pypi-release.yaml
ci/requirements/: doc.yml  environment.yml
doc/: README.rst  als_uls_ingestion_guide.html  conf.py  index.rst
doc/dashboard/: index.html
doc/gallery/: README.rst  catalog_discovery.py  efda_disturbances.py  forest_age_vignette.py  load_and_subset.py
doc/user/: api.rst  catalog_overview.rst  contributing.rst  database.rst  faq.rst  fundamentals.filters.rst  fundamentals.processor.rst  fundamentals.provider.rst  fundamentals.rst  fundamentals.s3.rst  fundamentals.setup.rst  index.rst  installing.rst  quick-overview.rst  why-eoforeststac.rst
eoforeststac/: __init__.py
eoforeststac/catalog/: __init__.py  als_products.py  cci_biomass.py  efda.py  factory.py  forestpaths_genus.py  gami.py  gami_ageclass.py  gedi_l4d.py  hansen_gfc.py  jrc_gfc.py  jrc_tmf.py  liu_biomass.py  potapov_height.py  potapov_lcluc.py  radd_europe.py  reader.py  restor_landuse.py  robinson_cr.py  root.py  saatchi_biomass.py  tmf.py  uls_products.py  wang_forestage.py  writer.py
eoforeststac/catalog_builders/: efda.py  gami.py
eoforeststac/core/: __init__.py  assets.py  catalog.py  config.py  io.py  schema.py  zarr.py
eoforeststac/data/: __init__.py
eoforeststac/products/: __init__.py  als_products.py  cci_biomass.py  efda.py  forestpaths_genus.py  gami.py  gami_ageclass.py  gedi_l4d.py  hansen_gfc.py  jrc_gfc.py  jrc_tmf.py  liu_biomass.py  potapov_height.py  potapov_lcluc.py  radd_europe.py  restor_landuse.py  robinson_cr.py  saatchi_biomass.py  tmf.py  uls_products.py  wang_forestage.py
eoforeststac/providers/: EFDA.py  EFDA_provider.py  __init__.py  align.py  base.py  base_provider.py  discovery.py  gami.py  gami_provider.py  subset.py  zarr.py
eoforeststac/tests/: test_smoke.py  test_stac_validation.py
eoforeststac/utils/: print_versions.py
eoforeststac/writers/: CCI_biomass.py  __init__.py  als_products.py  base.py  efda.py  forestpaths_genus.py  gami.py  gami_ageclass.py  gedi_l4d.py  hansen_gfc.py  jrc_gfc.py  jrc_tmf.py  liu_biomass.py  potapov_height.py  potapov_lcluc.py  radd_europe.py  restor_landuse.py  robinson_cr.py  saatchi_biomass.py  tmf.py  uls_products.py  wang_forestage.py
examples/: 01_discover_catalog.ipynb  02_read_collection.ipynb  03_align_and_compare.ipynb
examples/geojson/: DE-Hai.geojson
foreststac/collections/: gami.py
foreststac/utils/: assets.py  catalog.py  config.py  metadata.py
scripts/: AEF_2S3bucket.py  EFDA_reader.py  annual_biomass_change.py  bucketpolicy.json  create_catalog.py  create_stac_catalog.py  data_aligner.py  gami_read.py  kernel_memory.py  mahalanobis_distance.py  plot_catalog.py  read_data.py  test_metric.py  update_attrs.py  write_CCI_biomass.py  write_collection.py  write_efda.py  write_gami.py  write_potapov_height.py  write_saatchi.py  write_tmf.py
stac-browser/src/theme/: page.scss
