[project]
name = "eoforeststac"
version = "0.1.0"
description = "Python tools for generating STAC catalogs of forest EO data"
authors = [{ name="Simon Besnard", email="simon.besnard@gfz.de" }]
license = "MIT"

dependencies = [
    # --- Core numerical stack ---
    "numpy<2.0",
    "xarray>=2024.1.0",

    # --- Zarr ---
    "zarr>=2.18,<3.0",

    # --- Chunking ---
    "dask[array]>=2024.4.0",

    # --- S3 / Ceph ---
    "boto3>=1.35,<1.36",
    "botocore>=1.35,<1.36",
    "s3fs>=2024.5,<2025.0",
    "fsspec>=2024.5,<2025.0",

    # --- Raster ---
    "rasterio>=1.3",
    "rioxarray>=0.15",

    # --- STAC ---
    "pystac>=1.12,<2",
    "stactools>=0.4.4",

    "pyproj>=3.6"
]

[tool.setuptools]
packages = ["eoforeststac"]

