[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "wheel",
    "setuptools-scm>=8"
]

[project]
name = "eoforeststac"
version = "0.1.0"
description = "Python tools for generating STAC catalogs of forest EO data"
authors = [{ name="Simon Besnard", email="simon.besnard@gfz.de" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)"
]
requires-python = ">=3.10"

dependencies = [
    # --- Core numerical stack ---
    "numpy<2.0",
    "xarray>=2024.1.0",

    # --- Zarr ---
    "zarr>=2.18,<3.0",

    # --- Chunking ---
    "dask[array]>=2024.4.0",

    # --- S3 / Ceph ---
    "boto3>=1.35,<1.36",
    "botocore>=1.35,<1.36",
    "s3fs>=2024.5,<2025.0",
    "fsspec>=2024.5,<2025.0",

    # --- Raster ---
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "geopandas",

    # --- STAC ---
    "pystac>=1.12,<2",
    "stactools>=0.4.4",

    "pyproj>=3.6"
]

[project.urls]
homepage = "https://github.com/simonbesnard1/eoforeststac"
documentation = "https://eoforeststac.readthedocs.io/en/latest/"
source = "https://github.com/simonbesnard1/eoforeststac"
tracker = "https://github.com/simonbesnard1/eoforeststac/issues"

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-self", "redundant-expr"]
exclude = ['build']
files = "eoforeststac"
show_error_context = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
extend-exclude = ["doc", "_typed_ops.pyi"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["eoforeststac/tests"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["eoforeststac/tests*", "eoforeststac/tests/*", "eoforeststac/tests/**/*", "scripts*"]

[tool.setuptools_scm]
fallback_version = "9999"


