[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "wheel",
    "setuptools-scm>=8"
]

[project]
name = "eoforeststac"
dynamic = ["version"]
description = "Python tools for generating STAC catalogs of forest EO data"
authors = [{ name="Simon Besnard", email="simon.besnard@gfz.de" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)"
]
requires-python = ">=3.10"

dependencies = [
    # --- Core numerical stack ---
    "numpy==2.4.1",
    "xarray==2025.12.0",

    # --- Zarr ---
    "zarr==2.18.0",
    "numcodecs==0.15.1",

    # --- Chunking ---
    "dask[array]==2025.12.0",

    # --- S3 / Ceph ---
    "boto3==1.35",
    "botocore==1.35",
    "s3fs==2024.12.0",
    "fsspec==2024.12.0",

    # --- Raster ---
    "rasterio==1.5.0",
    "rioxarray==0.20.0",
    "geopandas==1.1.2",

    # --- STAC ---
    "pystac>=1.14.3",
    "stactools==0.5.3",

    "pyproj>=3.7.2"
]

dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-env>=1.0",
    "pytest-xdist>=3.3",
    "pytest-timeout>=2.2",
    "hypothesis>=6.88",
    "pre-commit>=3.5",
    "ruff>=0.3",
    "mypy>=1.7",
    "black>=24.3",
    "isort>=5.12"
]

[project.urls]
homepage = "https://github.com/simonbesnard1/eoforeststac"
documentation = "https://eoforeststac.readthedocs.io/en/latest/"
source = "https://github.com/simonbesnard1/eoforeststac"
tracker = "https://github.com/simonbesnard1/eoforeststac/issues"

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-self", "redundant-expr"]
exclude = ['build']
files = "eoforeststac"
show_error_context = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
extend-exclude = ["doc", "_typed_ops.pyi"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["eoforeststac/tests"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["eoforeststac/tests*", "eoforeststac/tests/*", "eoforeststac/tests/**/*", "scripts*"]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
)/
'''



